celery-flower/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery-flower-svc
  namespace: default
spec:
  selector:
    app: celery-flower
  ports:
    - name: http
      port: 5566
      targetPort: 5566
  type: ClusterIP
