celery-flower/flower-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: celery-flower-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx-1.6.4
  rules:
    - host: celery-flower.demo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: celery-flower-svc
                port:
                  name: http
